Fixed Infloblox alignment

--- a/styles/infobox.css
+++ b/styles/infobox.css
@@ -87,7 +87,7 @@ div.infobox div.infobox-details section.row div.column-header {
 
 div.infobox div.infobox-details section.row div.column-details {
 	float:left !important;
-	padding:3px 4px 4px 4px !important;
+	padding:4px 4px 4px 4px !important;
 	width:154px !important;
 	margin:0 !important;
 	font-size:0.85em !important;
